[package]
name = "wgpu-info"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A tool to print and process information about available wgpu adapters."
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitflags.workspace = true
env_logger.workspace = true
hashbrown = { workspace = true, features = ["serde"] }
pico-args.workspace = true
serde = { workspace = true, features = ["default"] }
serde_json.workspace = true
wgpu.workspace = true
